<resources>
    <string name="app_name">USC Films</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_watchList">WatchList</string>
    <string name="nav_search">Search</string>
    <string name="homeTitle">USC Films</string>
    <string name="btn_mov">Movies</string>
    <string name="btn_tv">TV Shows</string>
    <string name="sub_title_top">Top-Rated</string>
    <string name="logo">logo</string>
    <string name="text_loading">Loading...</string>
    <string name="sub_title_popular">"Popular"</string>
    <string name="pop_open_in_tmdb">Open in TMDB</string>
    <string name="pop_share_on_facebook">Share on Facebook</string>
    <string name="pop_share_on_twitter">Share On Twitter</string>
    <string name="pop_add_to_watchlist">Add to Watchlist</string>
    <string name="pop_remove_watchlist">Remove from Watchlist</string>
    <string name="footer_text">Powered by TMDB \n Developed by LiangGuo</string>
    <string name="empty_wl_text">Nothing saved to Watchlist</string>
    <string name="hint_search">Search Movies and TV</string>
    <string name="base_url">https://lianghw9.wn.r.appspot.com/</string>
    <string name="search_no_res">No result found.</string>
    <string name="title_activity_detail">detailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="detail_overview_title">Overview</string>
    <string name="detail_genres_title">Genres</string>

</resources>