<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/loading_effect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:text="@string/text_loading"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="56dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            android:scaleType="fitStart"
            android:src="@drawable/ic_theaters_white_18dp" />

        <TextView
            android:id="@+id/homeTextView"
            android:layout_width="183dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/homeTitle"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_mov"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_mov"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="@string/btn_mov" />

        <Button
            android:id="@+id/button_tv"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_tv"
            android:textColor="@color/colorMost"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.651"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_content"
            >



            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="435dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorEnabled="true"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="1dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1" />

            <TextView
                android:id="@+id/text_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/sub_title_top"
                app:layout_constraintStart_toStartOf="@id/main_content"
                app:layout_constraintTop_toBottomOf="@id/slider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/main_content"

                app:layout_constraintTop_toBottomOf="@id/text_top_rated">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/text_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/sub_title_popular"
                app:layout_constraintStart_toStartOf="@id/main_content"
                app:layout_constraintTop_toBottomOf="@id/gallery" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gallery_popular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/main_content"
                app:layout_constraintTop_toBottomOf="@id/text_popular">

            </androidx.recyclerview.widget.RecyclerView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>